--- a/lab2-end/pom.xml
+++ b/lab2-end/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.2.7.RELEASE</version>
 	</parent>
-	<artifactId>lab2-begin</artifactId>
+	<artifactId>lab2-end</artifactId>
 	<packaging>jar</packaging>
 	<name>WAFEPA</name>
 	<properties>
